--- a/client-outcomes.html
+++ b/client-outcomes.html
@@ -931,7 +931,7 @@ our results
       <p>Join our newsletter for mental wellness tips.</p>
       <form id="newsletter-form">
         <input type="email" id="newsletter-email" placeholder="Enter your email" required>
-        <button type="submit">Subscribe</button>
+        <button type="submit" style="height: 40px;">Subscribe</button>
       </form>
       <p id="subscribe-msg" class="subscribe-msg" style="color: #144442;"></p>
 
