--- a/contact.html
+++ b/contact.html
@@ -323,6 +323,8 @@
       font-family: 'Segoe UI', sans-serif;
       margin-bottom: -10px;
       color: #2e3d49;
+                  border: 2px solid #559288;
+
       border-top-left-radius: 50px;
       border-top-right-radius: 50px;
       box-shadow: 0 -15px 30px rgba(0, 0, 0, 0.05);
