--- a/get.html
+++ b/get.html
@@ -249,8 +249,9 @@
             font-family: 'Segoe UI', sans-serif;
             margin-bottom: -10px;
             color: #2e3d49;
-            border-top-left-radius: 50px;
-            border-top-right-radius: 50px;
+                  border: 2px solid #559288;
+      border-top-left-radius: 50px;
+      border-top-right-radius: 50px;
             box-shadow: 0 -15px 30px rgba(0, 0, 0, 0.05);
             animation: fadeInUp 1s ease-in-out;
         }
@@ -505,7 +506,7 @@
             style="display:none; text-align:center; margin-top:20px; font-size:20px; color:green;">
             <p>Thank you for answering the questions!</p>
             <a href="#">
-                <button
+                <button onclick="window.location.href='our_suggestion.html'"
                     style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 6px; font-size: 16px; cursor: pointer;">
                     Go to Next Page
                 </button>
