--- a/index.html
+++ b/index.html
@@ -406,8 +406,10 @@ th {
       padding: 60px 20px 30px;
       font-family: 'Segoe UI', sans-serif;
       margin-bottom: -10px;
-      color: #2e3d49;
-      border-top-left-radius: 50px;
+      color: #2e3d49; 
+      border: 2px solid #559288;
+
+      border-top-left-radius: 50px; 
       border-top-right-radius: 50px;
       box-shadow: 0 -15px 30px rgba(0, 0, 0, 0.05);
       animation: fadeInUp 1s ease-in-out;
