--- a/login.html
+++ b/login.html
@@ -63,8 +63,8 @@
     .zara-footer-newsletter button:hover{background:#144442;}
     .subscribe-msg{margin-top:10px;color:#07302e;font-size:14px;display:none;}
     .zara-social-icons{margin-top:20px;}
-    .zara-social-icons a{color:#2b7a78;margin-right:12px;font-size:20px;transition:transform 0.3s;}
-    .zara-social-icons a:hover{transform:scale(1.2);}
+    .zara-social-icons a{color:#dfe7e7;margin-right:12px;font-size:20px;transition:transform 0.3s;}
+    .zara-social-icons a:hover{transform:scale(1.2); color:#2b7a78;}
     .zara-footer-bottom{text-align:center;margin-top:50px;border-top:1px solid rgba(0,0,0,0.2);padding-top:15px;font-size:14px;color:#2b7a78;}
     @media(max-width:768px){.zara-footer-container{text-align:center;}.zara-footer-newsletter form{flex-direction:column;}}
   </style>
@@ -146,7 +146,7 @@
 
       <div class="zara-footer-col">
         <h3>Contact</h3>
-        <p>Email: <a href="mailto:zara@therapist.com">zara@therapist.com</a></p>
+        <p>Email: <a href="mailto:zara@therapist.com" style="text-decoration: none; color: #007f5f;">zara@therapist.com</a></p>
         <p>Phone: +123 456 7890</p>
         <p>Location: Online & In-Person</p>
       </div>
